--- a/platforms/browser/www/css/style.css
+++ b/platforms/browser/www/css/style.css
@@ -1,31 +1,87 @@
-/*
-font-family: 'Staatliches', cursive;
-font-family: 'Comfortaa', cursive;
-*/
+@import url('https://fonts.googleapis.com/css?family=Press+Start+2P');
 
-
-/*
-@import url('https://fonts.googleapis.com/css?family=Comfortaa|Staatliches');
-
-* {
+    {
     box-sizing: border-box;
     margin: auto;
 
 }
-*/
+
 html,
 body {
-    margin: 0;
+    margin: 0%;
+}
+
+header {
+    margin: 0%;
+    background-color: #1cd838;
+    border-width: 6px;
+    border-color: black;
+    border-style: solid;
 }
 
 body {
-    background-color: black;
+    background-image: url(../img/circuit%20board.png);
+    background-position: top;
+    background-attachment: fixed;
 }
 
 p {
-    color: white
+    color: white;
+    font-size: 40 pt;
 }
 
 .info {
     position: absolute;
+}
+
+.zero {
+    margin: auto;
+    padding: 5%;
+    background-color: black;
+    height: 30%;
+    width: 80%;
+    border-width: 4%;
+    border-color: #1cd838;
+    border-style: solid;
+}
+
+
+h1 {
+    color: #1cd838;
+    text-align: center;
+    font-size: 60pt;
+    margin: auto;
+    margin-bottom: 22%;
+    margin-top: 40%;
+    font-family: 'Press Start 2P', cursive;
+    -webkit-text-stroke-width: 5px;
+    -webkit-text-stroke-color: black;
+
+}
+
+h2 {
+    font-size: 15pt;
+    color: #1cd838;
+    margin: 0%;
+    font-family: 'Press Start 2P', cursive;
+    padding: 5%;
+    text-align: center;
+}
+
+h3 {
+    font-size: 15pt;
+    color: #1cd838;
+    text-align: center;
+    margin: 0%;
+    font-family: 'Press Start 2P', cursive;
+}
+
+h4 {
+    font-size: 25pt;
+    color: black;
+    text-align: center;
+    padding: 10px;
+    margin: 0;
+    font-family: 'Press Start 2P', cursive;
+
 }
